--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -8,15 +8,6 @@
       </button>
     </li>
   </ul>
+  <app-hero-detail [hero]="selectedHero"></app-hero-detail>
 
-  <div class="detail" *ngIf="selectedHero">
-
-    <h2 class="header">{{selectedHero.name | uppercase}} Details</h2>
-    <div>id: {{selectedHero.id}}</div>
-    <div>
-      <label for="hero-name">Hero name: </label>
-      <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
-    </div>
-
-  </div>
 </div>
